<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>automation</groupId>
	<artifactId>framework</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>framework</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<selenium-version>3.141.59</selenium-version>
		<testng-version>6.14.3</testng-version>
		<driver-manager-version>3.6.1</driver-manager-version>
		<allure-testng-version>2.12.1</allure-testng-version>
		<allure-maven-version>2.10.0</allure-maven-version>
		<log4j-version>1.2.17</log4j-version>
		<aspectj.version>1.9.4</aspectj.version>
		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven-surefire.plugin.version>3.0.0-M3</maven-surefire.plugin.version>
		<poi-version>4.1.0</poi-version>
		<codehuse-mojo-version>1.6.0</codehuse-mojo-version>
		<rest-assured-version>4.0.0</rest-assured-version>
		<elasticsearch-version>5.5.3</elasticsearch-version>
		<unirest-version>1.4.9</unirest-version>
		<jackson-version>2.9.10.8</jackson-version>
		<json-version>20180813</json-version>
	</properties>

	<build>


		<plugins>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>${codehuse-mojo-version}</version>
				<executions>
					<execution>
						<phase>generate-test-resources</phase>
						<goals>
							<goal>java</goal>
						</goals>
						<configuration>
							<executable>java</executable>
							<classpathscope>compile</classpathscope>
							<mainClass>com.framework.utils.Driver</mainClass>
							<cleanupDaemonThreads>false</cleanupDaemonThreads>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<compilerVersion>${maven.compiler.source}</compilerVersion>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire.plugin.version}</version>
				<configuration>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					<argLine>
						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
					</argLine>
					<properties>
						<property>
							<name>listener</name>
							<value>org.imaginea.jenkins.plugins.testinprogress.testng.TestNGProgressRunListener</value>
						</property>
					</properties>
					<forkCount>2</forkCount>
					<reuseForks>false</reuseForks>
					<parallel>tests</parallel>
					<threadCount>2</threadCount>
					<suiteXmlFiles>MasterSuite.xml</suiteXmlFiles>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.aspectj</groupId>
						<artifactId>aspectjweaver</artifactId>
						<version>${aspectj.version}</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium-version}</version>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng-version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>${driver-manager-version}</version>
		</dependency>

		<dependency>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-testng</artifactId>
			<version>${allure-testng-version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.automatedowl</groupId>
			<artifactId>allure-environment-writer</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j-version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${poi-version}</version>
		</dependency>

		<dependency>
			<groupId>org.imaginea.jenkins.plugins</groupId>
			<artifactId>testInProgress-testng-client</artifactId>
			<version>0.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>ru.yandex.qatools.ashot</groupId>
			<artifactId>ashot</artifactId>
			<version>1.1</version>
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>${rest-assured-version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>${json-version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson-version}</version>
		</dependency>

		<dependency>
			<groupId>com.mashape.unirest</groupId>
			<artifactId>unirest-java</artifactId>
			<version>${unirest-version}</version>
		</dependency>

		<dependency>
			<groupId>org.elasticsearch.client</groupId>
			<artifactId>rest</artifactId>
			<version>${elasticsearch-version}</version>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>repo.jenkins-ci.org</id>
			<url>http://repo.jenkins-ci.org/public/</url>
		</repository>
	</repositories>

</project>
